chore: refactor integration tests to use RestTestClient